--- a/index.html
+++ b/index.html
@@ -115,7 +115,31 @@
 
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
+
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+      <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/jason139414" target="_blank">Jason Chang</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/jason41391" target="_blank">jason</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.google.com" target="_blank" title="First Resource">Google it.</a>
+              </li>
+              <li>
+                <a href="https://openai.com/" target="_blank" title="Second Resource">CHATGPT</a>
+              </li>
+              <li>
+                <a href="https://wikipedia.org/" target="_blank" title="Third resource">Wikipedia !!!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
                 <!-- ________ Brian Ali card Start ________  -->
                   <div class="card">
                     <p class="name">Brian Ali</p>
