--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+      <!-- ________ Sohum card START ________  -->
+      <div class="card">
+        <p class="name">Sohum Chandra Srivastava</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://x.com/sohumcs" target="_blank">@SohumCS</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/sohumcs" target="_blank">sohumcs</a>
+        </p>
+        <p class="about">A fullstack developer with passion for creativity and innovation</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://stackoverflow.com/" target="_blank" title="stack overflow">Stack overflow</a>
+            </li>
+            <li>
+              <a href="https://w3schools.com/" target="_blank" title="W3schools">W3schools</a>
+            </li>
+            <li>
+              <a href="https://www.freecodecamp.org/" target="_blank" title="Free code camp">Free code camp</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+<!-- ________ Sohum card END ________  -->
+
       <div class="card">
         <p class="name">Ansh Grover</p>
         <p class="contact">
