--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700" />
+    <link href="https://fonts.googleapis.com/css2?family=Domine&amp;display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <title>Contribute To This Project</title>
     <script type="module" src="assets/script.js" defer=""></script>
   </head>
@@ -20,11 +22,15 @@
           <!-- Night Mode Creation -->
           <div class="nightmode">
             <div class="toggle-box">
-              <input type="checkbox" name="checkbox1" id="toggle-box-checkbox">
+              <input type="checkbox" name="checkbox1" id="toggle-box-checkbox" />
               <label for="toggle-box-checkbox" class="toggle-box-label-left"></label>
               <label for="toggle-box-checkbox" class="toggle-box-label"></label>
             </div>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous"></script>
+            <script
+              src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+              integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
+              crossorigin="anonymous"
+            ></script>
           </div>
           <!-- / Night Mode Creation -->
         </div>
@@ -38,7 +44,12 @@
               This is a tutorial to help first-time contributors participate in a simple and easy project. Get more
               comfortable using GitHub and make your first open source contribution. It's quick and easy.
             </p>
-            <a class="button" href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/README.md" target="_blank" title="Go to project README - A step by step tutorial">
+            <a
+              class="button"
+              href="https://github.com/Syknapse/Contribute-To-This-Project/blob/master/README.md"
+              target="_blank"
+              title="Go to project README - A step by step tutorial"
+            >
               Learn how to contribute
               <i class="fas fa-long-arrow-alt-right"></i>
             </a>
@@ -47,7 +58,17 @@
         <div class="column">
           <div class="column-right">
             <div class="twitter-button">
-              <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-text="Contribute To This Project. An easy Git and GitHub project for first-time contributors, with a full tutorial." data-url="https://github.com/Syknapse/Contribute-To-This-Project" data-via="Syknapse" data-hashtags="100DaysOfCode" data-show-count="false" title="Tweet this project">
+              <a
+                href="https://twitter.com/share?ref_src=twsrc%5Etfw"
+                class="twitter-share-button"
+                data-size="large"
+                data-text="Contribute To This Project. An easy Git and GitHub project for first-time contributors, with a full tutorial."
+                data-url="https://github.com/Syknapse/Contribute-To-This-Project"
+                data-via="Syknapse"
+                data-hashtags="100DaysOfCode"
+                data-show-count="false"
+                title="Tweet this project"
+              >
                 Tweet
               </a>
               <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -59,15 +80,15 @@
       </div>
 
       <div class="searchContainer">
-        <input id="searchbar" type="search" name="search" placeholder="Search for your card here!">
+        <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
       </div>
       <div class="grid" id="contributions">
-<!-- ================================================ --> 
-<!-- ==================  TEMPLATE  ================== --> 
-<!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
- 
-<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-<div class="card">
+        <!-- ================================================ -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -91,20 +112,20 @@
             </ul>
           </div>
         </div>
-<!-- ________ *TEMPLATE* Contributor card END ________  -->
- 
-<!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines --> 
-<!-- ============== ^^^^ TEMPLATE ^^^^ ============== --> 
-<!-- ================================================ -->
- 
-<!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below --> 
-<!-- Keep one line of space above and below your card --> 
-<!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
- 
-<!-- ========= START ========= -->
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-<!-- ========= Card 1 START =========  -->
-<div class="card">
+        <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
+        <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
+        <!-- ================================================ -->
+
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+        <!-- Keep one line of space above and below your card -->
+        <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ========= START ========= -->
+
+        <!-- ========= Card 1 START =========  -->
+        <div class="card">
           <p class="name">ItzTas</p>
           <p class="contact">
             <i class="fab fa-x-linkedin"></i>
@@ -134,10 +155,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 1 END =========  -->
+        <!-- ========= Card 1 END =========  -->
 
-<!-- ========= Card 2 START =========  -->
-<div class="card">
+        <!-- ========= Card 2 START =========  -->
+        <div class="card">
           <p class="name">Sohum Chandra Srivastava</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -161,10 +182,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 2 END =========  -->
+        <!-- ========= Card 2 END =========  -->
 
-<!-- ========= Card 3 START =========  -->
-<div class="card">
+        <!-- ========= Card 3 START =========  -->
+        <div class="card">
           <p class="name">Jatin Tyagi</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -188,10 +209,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 3 END =========  -->
+        <!-- ========= Card 3 END =========  -->
 
-<!-- ========= Card 4 START =========  -->
-<div class="card">
+        <!-- ========= Card 4 START =========  -->
+        <div class="card">
           <p class="name">Bogdan Maric</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
@@ -215,10 +236,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 4 END =========  -->
+        <!-- ========= Card 4 END =========  -->
 
-<!-- ========= Card 5 START =========  -->
-<div class="card">
+        <!-- ========= Card 5 START =========  -->
+        <div class="card">
           <p class="name">Jason Chang</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -242,10 +263,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 5 END =========  -->
+        <!-- ========= Card 5 END =========  -->
 
-<!-- ========= Card 6 START =========  -->
-<div class="card">
+        <!-- ========= Card 6 START =========  -->
+        <div class="card">
           <p class="name">SHIHAN ZHENG</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
@@ -266,7 +287,11 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.techinterviewhandbook.org/software-engineering-interview-guide/" target="_blank" title="Second Resource">
+                <a
+                  href="https://www.techinterviewhandbook.org/software-engineering-interview-guide/"
+                  target="_blank"
+                  title="Second Resource"
+                >
                   Tech Interview Handbook
                 </a>
               </li>
@@ -276,10 +301,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 6 END =========  -->
+        <!-- ========= Card 6 END =========  -->
 
-<!-- ========= Card 7 START =========  -->
-<div class="card">
+        <!-- ========= Card 7 START =========  -->
+        <div class="card">
           <p class="name">Mahesh Suryawanshi</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -305,10 +330,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 7 END =========  -->
+        <!-- ========= Card 7 END =========  -->
 
-<!-- ========= Card 8 START =========  -->
-<div class="card">
+        <!-- ========= Card 8 START =========  -->
+        <div class="card">
           <p class="name">qianqiu</p>
           <p class="contact">
             <i class="fab fa-github"></i>
@@ -324,7 +349,11 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.keysight.com/us/en/learn/course.high-speed-oscilloscope-basics.html" target="_blank" title="Second Resource">
+                <a
+                  href="https://www.keysight.com/us/en/learn/course.high-speed-oscilloscope-basics.html"
+                  target="_blank"
+                  title="Second Resource"
+                >
                   Keysight high-speed oscilloscope basics
                 </a>
               </li>
@@ -336,10 +365,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 8 END =========  -->
+        <!-- ========= Card 8 END =========  -->
 
-<!-- ========= Card 9 START =========  -->
-<div class="card">
+        <!-- ========= Card 9 START =========  -->
+        <div class="card">
           <p class="name">Ansh Grover</p>
           <p class="contact">
             <i class="fab fa-x-linkedin"></i>
@@ -369,10 +398,10 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 9 END =========  -->
+        <!-- ========= Card 9 END =========  -->
 
-<!-- ========= Card 10 START =========  -->
-<div class="card">
+        <!-- ========= Card 10 START =========  -->
+        <div class="card">
           <p class="name">Emerson</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -388,7 +417,11 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words" target="_blank" title="First Resource">
+                <a
+                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words"
+                  target="_blank"
+                  title="First Resource"
+                >
                   Resources for Developers, by Developers
                 </a>
               </li>
@@ -403,18 +436,27 @@
             </ul>
           </div>
         </div>
-<!-- ========= Card 10 END =========  -->
+        <!-- ========= Card 10 END =========  -->
 
-<!-- ========= END ========= -->
- 
-<!-- <<<<< Do not change anything below this line >>>>> --> 
-<!-- -------------------------------------------------- -->
-</div>
-      <hr>
+        <!-- ========= END ========= -->
+
+        <!-- <<<<< Do not change anything below this line >>>>> -->
+        <!-- -------------------------------------------------- -->
+      </div>
+      <hr />
       <button id="topButton" title="Go to top">
-        <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="1em" width="1em" viewBox="0 0 40 40" style="vertical-align: middle; font-size: 2.25em">
+        <svg
+          fill="currentColor"
+          preserveAspectRatio="xMidYMid meet"
+          height="1em"
+          width="1em"
+          viewBox="0 0 40 40"
+          style="vertical-align: middle; font-size: 2.25em"
+        >
           <g>
-            <path d="m21.7 9.3l-7.9 7.9c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l3.8-3.8v12.6c0 1 0.7 1.7 1.7 1.7s1.6-0.7 1.6-1.7v-12.6l3.9 3.8c0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5c0.7-0.6 0.7-1.7 0-2.3l-7.8-7.9z"></path>
+            <path
+              d="m21.7 9.3l-7.9 7.9c-0.6 0.6-0.6 1.7 0 2.3s1.7 0.7 2.4 0l3.8-3.8v12.6c0 1 0.7 1.7 1.7 1.7s1.6-0.7 1.6-1.7v-12.6l3.9 3.8c0.3 0.3 0.7 0.5 1.1 0.5s0.9-0.2 1.2-0.5c0.7-0.6 0.7-1.7 0-2.3l-7.8-7.9z"
+            ></path>
           </g>
         </svg>
       </button>
@@ -425,4 +467,5 @@
         <span id="currentYear"></span>
       </footer>
     </div>
-</body></html>
+  </body>
+</html>
