--- a/index.html
+++ b/index.html
@@ -122,6 +122,35 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Rudra Pratap Singh</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rudra-pratap-singh1712/" target="_blank">rudra-pratap-singh1712</a>
+            <br>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Rudra00codes" target="_blank">Rudra00codes </a>
+          </p>
+          <p class="about">I am currently pursuing a Bachelor's degree in Computer Science🎓, specializing in AI and ML.🤖<br>I enjoy doing Web development.👨‍💻</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://openui.fly.dev" target="_blank" title="OpenUI let's you describe UI using your imagination, then see it rendered live. ">OpenUI</a>
+              </li>
+              <li>
+                <a href="https://readme.so/" target="_blank" title="Use readme.so's markdown editor and templates to easily create a ReadMe for your projects.">readme.so</a>
+              </li>
+              <li>
+                <a href="https://v0.dev/" target="_blank" title="Vercel v0 is a powerful tool for rapidly prototyping and building various web application elements.">v0 by Vercel</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ========= START ========= -->
 
         <!-- ========= Card 1 START =========  -->
