--- a/index.html
+++ b/index.html
@@ -438,6 +438,43 @@
         </div>
         <!-- ========= Card 10 END =========  -->
 
+        <!-- ========= Card 11 START =========  -->
+        <div class="card">
+          <p class="name">Abhay Kumar</p>
+          <p class="contact">
+            <i class="fab fa-x-instagram"></i>
+            <a href="https://www.linkedin.com/in/abhay-kumar-a603431b4/" target="_blank">@Abhay Kumar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/speedywarp" target="_blank">speedywarp</a>
+          </p>
+          <p class="about">Heyyy Peeps!
+            speedywarp here... I love to explore various sides of technologies
+            i woke up today and decided to make a stupid contribution
+            byee byee... take care!
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/learn-javascript-js-roadmap-for-beginners/?ref=ghm" target="_blank" title="First Resource">
+                  A nice and subtle article to learn JavaScript</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/studyplan/30-days-of-javascript/" target="_blank" title="Second Resource">
+                  Practice Javascript here...
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/abhaykumarr_/" target="_blank" title="Third resource">
+                  Hit me up on the 'Gram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Card 11 END =========  -->
+
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
