--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *Rekklessss* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Divyanshu Pabia</p>
+          <p class="contact">
+            <i class="fab fa-x-linkedin"></i>
+            <a href="https://www.linkedin.com/in/thedivyanshupabia/" target="_blank">LinkedIn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Rekklessss" target="_blank">Github</a>
+            <i class="fa-solid fa-star"></i>
+            <a href="https://thedivyanshupabia.com/" target="_blank">Portfolio</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="First Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://w3schools.com/" target="_blank" title="Second Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://freecodecamp.org/" target="_blank" title="Third resource">FreeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Rekklessss* Contributor card END ________  -->
+
+
         <!-- ========= START ========= -->
 
         <!-- ========= Card 1 START =========  -->
