--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ Vimal Vinod's card START ________  -->
+        <div class="card">
+          <p class="name">Vimal Vinod</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/dalekvim" target="_blank">dalekvim</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dalekvim" target="_blank">dalekvim</a>
+          </p>
+          <p class="about">I'm a mathematics undergraduate at the University of Warwick. I like anime and learning foreign languages.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">eat</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">sleep</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Vimal Vinod's card END ________  -->
+
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
