--- a/index.html
+++ b/index.html
@@ -122,6 +122,32 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        
+        <!-- ________ *de_soot* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">de_soot</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/de_soot" target="_blank">Github</a>
+          </p>
+          <p class="about">Run-of-the-mill CS Student</p>
+          <div class="resources">
+            <p>3 Useful CS Learning Resources</p>
+            <ul>
+              <li>
+                <a href="https://teachyourselfcs.com" target="_blank" title="First Resource">Teach Yourself Computer Science</a>
+              </li>
+              <li>
+                <a href="https://tutorial.math.lamar.edu" target="_blank" title="Second Resource">Paul's Online Notes</a>
+              </li>
+              <li>
+                <a href="https://freecomputerbooks.com" target="_blank" title="Third Resource">Free Computer Books</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *de_soot* Contributor card END ________  -->
+        
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
