--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________*Tech-frank* Contributor card Start_________-->
+        <div class="card">
+          <p class="name">Tech-frank</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/EtuFrankly57851" target="_blank">@EtuFrankly57851</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Tech-frank" target="_blank">@Tech-frank</a>
+          </p>
+          <p class="about">A Self-taught developer, now Software Engineering student, hoping to be the best there is </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.dev.to/" target="_blank" title="Dev.to">Dev.to</a>
+              </li>
+              <li>
+                <a href="https://www.stackoverflow.com/" target="_blank" title="stackoverflow">stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://www.roadmap.sh" target="_blank" title="Roadmap">Roadmap</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________*Tech-frank* Contributor card End_________-->
+
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
