--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ Kyle's card START ________  -->
+        <div class="card">
+          <p class="name">Kyle Michaels</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="www.linkedin.com/in/k-michaels" target="_blank">Kyle Michaels</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Kyle-Michaels" target="_blank">Kyle-Michaels</a>
+          </p>
+          <p class="about">I am an aspiring web developer from California. This is my first open source contribution!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://neetcode.io/" target="_blank" title="First Resource">NeetCode</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/" target="_blank" title="Second Resource">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Kyle's card END ________  -->
+
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
