--- a/index.html
+++ b/index.html
@@ -122,6 +122,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Edward Okech</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/EduadoOkech" target="_blank">@EduadoOkech</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/eduoke" target="_blank">eduoke</a>
+          </p>
+          <p class="about">Seasoned applications developer with team & projects management enthusiasm | Scrum, ITIL V4, PMP</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://read.highgrowthengineer.com/" target="_blank" title="First Resource">High Growth Engineer</a>
+              </li>
+              <li>
+                <a href="https://www.developing.dev/?r=gjveo" target="_blank" title="Second Resource">The Developing Dev</a>
+              </li>
+              <li>
+                <a href="https://www.jobflowafrika.io" target="_blank" title="Third resource">AI powered interview practicing app</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
