--- a/index.html
+++ b/index.html
@@ -675,20 +675,23 @@
         <i class="fab fa-x-twitter"></i>
         <a href="https://www.twitter.com/your_user_handle" target="_blank">Do not Have Account</a>
         <i class="fab fa-github"></i>
-        <a href="https://www.github.com/your_user_handle" target="_blank">AbhishekThakur007</a>
+        <a href="https://www.github.com/AbhishekThakur007" target="_blank">AbhishekThakur007</a>
       </p>
-      <p class="about">about you</p>
+      <p class="about"> I’m currently working on C++ , C , HTML , CSS , JAVASCRIPT.
+                       👯 I’m looking to collaborate on Beginner Friendly Projects.
+                       🤝 I’m looking for help with MERN Stack.
+                       🌱 I’m currently learning MERN Stack.</p>
       <div class="resources">
         <p>3 Useful Dev Resources</p>
         <ul>
           <li>
-            <a href="#" target="_blank" title="First Resource">Sublime</a>
+            <a href="https://www.geeksforgeeks.org/" target="_blank" title="First Resource">gfg</a>
           </li>
           <li>
-            <a href="#" target="_blank" title="Second Resource">Kaggle</a>
+            <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
           </li>
           <li>
-            <a href="#" target="_blank" title="Third resource">CHATGPT</a>
+            <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">freecodecamp</a>
           </li>
         </ul>
       </div>
