--- a/index.html
+++ b/index.html
@@ -123,6 +123,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Rishabh card START ________  -->
+        <div class="card">
+          <p class="name">Rishabh Raj Verma</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.linkedin.com/in/rishabh-raj-verma/" target="_blank">rishabh-raj-verma</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/RishabhRaj43" target="_blank">RishabhRaj43</a>
+          </p>
+          <p class="about">I am a B.Tech Student just here for some contributions 🫶🏻</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://rishabhraj43.hashnode.dev/" target="_blank" title="First Resource">HashNode</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">Geeks for Geeks</a>
+              </li>
+              <li>
+                <a href="https://rahuldkjain.github.io/gh-profile-readme-generator/" target="_blank" title="Third resource">Readme Generator</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Rishabh card END ________  -->
+
         <!-- ________ Edward card START ________  -->
         <div class="card">
           <p class="name">Edward Okech</p>
