--- a/index.html
+++ b/index.html
@@ -123,6 +123,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Vraj Patel Card START ________ -->
+        <div class="card">
+          <p class="name">Vraj Patel</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/vraj-patel-4b364a200" target="_blank">Vraj Patel</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vrajpatel1812" target="_blank">vrajpatel1812</a>
+          </p>
+          <p class="about">I love working with MERN stack web development and have build so many Project. I'm a huge football fan and enjoy watching every game, with a dream of one day seeing a match live in a stadium.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/vrajpatel1812/Web-Projects" target="_blank" title="First Resource">Web Development Project for biggeners.</a>
+              </li>
+              <li>
+                <a href="https://learn-anything.xyz/" target="_blank" title="Second Resource">Find documentation of any topic.</a>
+              </li>
+              <li>
+                <a href="https://chromewebstore.google.com/detail/wappalyzer-technology-pro/gppongmhjkpfnbhagpmjfkannfbllamg?hl=en" target="_blank" title="Third resource">This extension is help you for finding what tech use for building any website.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Vraj Patel card END ________ -->
+
         <!-- ________ Gl1tchblade card START ________  -->
         <div class="card">
           <p class="name">Gl1tchblade</p>
