--- a/index.html
+++ b/index.html
@@ -123,6 +123,37 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+          <!-- ________ Mayur cardcard START ________  -->
+          <div class="card">
+            <p class="name">Mayur Tekale</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://twitter.com/mayur_b_tekale" target="_blank">Your handle</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/mayurr7" target="_blank">Your handle</a>
+            </p>
+            <p class="about">👨‍💻 Front-End Developer | Open-Source Contributor | JavaScript Enthusiast</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.theodinproject.com/users/sign_in" target="_blank" title="First Resource">The Odin Project</a>
+                </li>
+                <li>
+                  <a href="https://edabit.com/challenge/bL7hSc6Zh4zZJzGmw" target="_blank" title="Second Resource">edabit for js practice</a>
+                </li>
+                <li>
+                  <a href="https://github.com/mayurr7" target="_blank" title="Third resource">gitHub</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ Mayur card card END ________  -->
+  
+        
+  
+  
+
         <!-- ________ Gl1tchblade card START ________  -->
         <div class="card">
           <p class="name">Gl1tchblade</p>
